Revision history for CPAN-Mini

{{$NEXT}}

1.111010  2012-10-24 10:46:35 America/New_York
          fix the old ->trace method, broken in 1.111004

1.111009  2012-08-27 21:32:39 America/New_York
          config options that once had to be specified as multiple entries
          on one line may now be given as repeated entries; these are
          also_mirror, module_filters, and path_filters

1.111008  2011-12-23 13:36:41 America/New_York
          don't fail tests when the outside env has set CPAN_MINI_CONFIG
          (thanks, Stephen Thirwall!)

1.111007  2011-05-12 08:21:55 America/New_York
          run the test minicpan in offline mode to avoid tester errors

1.111006  2011-04-30 14:21:22 America/New_York
          set the default log_level much earlier, to avoid an undef warning

1.111005  2011-04-29 11:14:10 America/New_York
          no code changes, this release is just intended to be indexed

1.111004  2011-04-26 08:57:00 America/New_York
          overhaul logging: there is now a log_level

          delay creation of scratch dir until needed

          a bunch of tests added for switch and config processing

1.111003  2011-04-18 14:17:36 Europe/Amsterdam
          add tools for building a fake cpan and an xt test for testing online

1.111002  2011-04-16 18:20:43 Europe/Amsterdam

          test for online-ness by HEAD-ing 02packages, not the remote root

1.111001  2011-02-10 19:34:38 America/New_York
          restore six-digit-mantissa versioning to help downstream packagers

1.111     2011-02-05 15:13:17 America/New_York
          add --timeout (thanks, Gabor Szabo!)

1.110     2011-01-27 21:48:34 America/New_York
          if the config file does not exist, do not die or spew warnings; this
          fixes RT #57388

1.100630  2010-03-04 07:57:34 America/New_York
          suppress "using config..." during setup with -qq

1.100593  2010-02-28 16:58:34 America/New_York
          fix a previously unreached bit of code re: basename
